--- a/Tistory_mainpage_clone/app/src/main/res/layout/activity_main.xml
+++ b/Tistory_mainpage_clone/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="195dp">
 
             <TextView
                 android:id="@+id/textView"
@@ -25,25 +25,39 @@
                 android:text="@string/greeting"
                 android:textColor="#000000"
                 android:textSize="30sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:paddingBottom="20dp"
+                android:text="@string/blog"
+                android:textColor="#000000">
+
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="@string/blog2">
+
+            </TextView>
         </FrameLayout>
 
 
-        <HorizontalScrollView
+        <FrameLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
-            android:layout_height="230dp">
+            android:layout_height="250dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
-        </HorizontalScrollView>
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:paddingTop="40dp"
+
             android:text="@string/recent"
             android:textColor="#000000" />
 
@@ -196,7 +210,6 @@
             android:elevation="5dp"
             android:layout_marginEnd="10dp">
 
-
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
@@ -232,13 +245,14 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="10dp"
+            android:paddingBottom="30dp">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <RelativeLayout
-                    android:layout_width="190dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp">
 
@@ -249,7 +263,7 @@
                         app:srcCompat="@drawable/topoftherock"
                         android:background="@drawable/image_rounded"
                         android:paddingTop="0dp"
-                        android:adjustViewBounds="true"/>
+                        android:scaleType="centerCrop"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -265,7 +279,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:layout_width="190dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/image_rounded">
 
@@ -275,7 +289,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/timesquare"
-                        android:adjustViewBounds="true"/>
+                        android:scaleType="centerCrop"/>
 
 
                     <TextView
